
[package]
name = "rust-siem"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "time", "ipnetwork"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
jsonwebtoken = "9.1"
clap = { version = "4.4", features = ["derive"] }
toml = "0.7"
directories = "5.0"
rtnetlink = "0.14"
futures = "0.3"
futures-util = "0.3"
geo = { version = "0.27", features = ["serde"] }
tempfile = "3.9"
base64 = "0.21"
aes = "0.8"
cipher = "0.4"
ipnetwork = "0.21"
nftables = "0.2"
zip = "2.6.1"
openssh = "0.11.5"
bash = "0.1.0"
